--- a/wp-content/themes/carnes-crossroads-2015/style.css
+++ b/wp-content/themes/carnes-crossroads-2015/style.css
@@ -6009,6 +6009,7 @@ This file is generated by `grunt build`, do not edit it by hand.
     text-align: center;
     position: absolute;
     background-color: rgba(133, 120, 94, 0.8);
+    z-index: 300;
     left: 50%;
     top: 50%;
     bottom: auto;
@@ -6117,10 +6118,12 @@ This file is generated by `grunt build`, do not edit it by hand.
       .hero__page, .hero__page--homes {
         margin-top: 0;
         height: 400px; } }
-    @media (max-width: 767px) {
-      .hero__page--homes {
-        height: 440px;
-        background-position: center left; } }
+    .hero__page--homes {
+      overflow: visible; }
+      @media (max-width: 767px) {
+        .hero__page--homes {
+          height: 440px;
+          background-position: center left; } }
     @media (max-width: 767px) {
       .hero__page:before, .hero__page--homes:before {
         content: '';
